--- a/HeirTu/template/index.html
+++ b/HeirTu/template/index.html
@@ -7,14 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <header>
-            Heir Tu
-        </header>
-        <aside>
+    <div class="grid-container">
+        <header class="header">
+           <div class="brand">
+           <a href="index.html">Heir Tu</a> 
+           </div>
+           <div class="header-links">
+            <a href="cart.html">Cart</a> 
+            <a href="SignIn.html">Sign in</a> 
+           </div>
+        </header >
+        <!-- <aside>
             Shopping Catagories
-        </aside>
-        <main>
+        </aside> -->
+        <main class="main">
             <ul>
                 <li>Product 1</li>
                 <li>Product 2</li>
@@ -23,7 +29,7 @@
                 <li>Product 5</li>
             </ul>
         </main>
-        <footer>
+        <footer class="footer">
             All Rights Reserved
         </footer>
 
