--- a/HeirTu/template/style.css
+++ b/HeirTu/template/style.css
@@ -7,5 +7,48 @@ body{
     font: 1.6rem Helvetica;
     height: 100vh;
     margin: 0;
-    
+
+}
+
+.grid-container{
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer";
+    grid-template-columns: 1fr ;
+    grid-template-rows: 5rem 1fr 5rem;
+    height: 100%;
+}
+
+.header{
+    grid-area: header;
+    background-color: navy;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+
+.brand a{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-decoration: none;
+
+}
+
+.header-links a{
+color: white;
+text-decoration: none;
+
+}
+
+.main{
+    grid-area: main;
+}
+
+.footer{
+    grid-area: footer;
+    background-color: navy;
+color: white;
 }
