--- a/HeirTu/template/index.html
+++ b/HeirTu/template/index.html
@@ -21,13 +21,22 @@
             Shopping Catagories
         </aside> -->
         <main class="main">
-            <ul>
-                <li>Product 1</li>
-                <li>Product 2</li>
+            <div class="content">
+            <ul class="products">
+                <li>
+                    <div class="product">
+                    <img src="/images/d1.jpg" alt="product">
+                    <div class="product-name">Pleated Skirt</div>
+                    <div class="product-brand"> Azuri</div>
+                    <div class="price"> $600</div>
+                </div>
+                </li> 
+                <!-- <li>Product 2</li>
                 <li>Product 3</li>
                 <li>Product 4</li>
-                <li>Product 5</li>
+                <li>Product 5</li> -->
             </ul>
+        </div>
         </main>
         <footer class="footer">
             All Rights Reserved
