--- a/HeirTu/template/style.css
+++ b/HeirTu/template/style.css
@@ -27,6 +27,8 @@ body{
     color: white;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: .5rem;
 }
 
 .brand a{
@@ -34,7 +36,6 @@ body{
     font-size: 2.5rem;
     font-weight: bold;
     text-decoration: none;
-
 }
 
 .header-links a{
@@ -43,6 +44,11 @@ text-decoration: none;
 
 }
 
+.header-links a:hover{
+    color: skyblue;
+    text-decoration: underline;  
+    }
+
 .main{
     grid-area: main;
 }
@@ -50,5 +56,8 @@ text-decoration: none;
 .footer{
     grid-area: footer;
     background-color: navy;
-color: white;
+     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
