--- a/HeirTu/template/index.html
+++ b/HeirTu/template/index.html
@@ -25,7 +25,7 @@
             <ul class="products">
                 <li>
                     <div class="product">
-                    <img src="/images/d1.jpg" alt="product">
+                    <img src="Images/mini-skirt.jpg" alt="product">
                     <div class="product-name">Pleated Skirt</div>
                     <div class="product-brand"> Azuri</div>
                     <div class="price"> $600</div>
