--- a/HeirTu/template/style.css
+++ b/HeirTu/template/style.css
@@ -61,3 +61,22 @@ text-decoration: none;
     justify-content: center;
     align-items: center;
 }
+
+/* Home Screen */
+
+.products{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.products li{
+    flex: 0 1 34rem;
+    margin: 1rem;
+    height: 50rem;
+    border-bottom: .1rem;
+}
+
+.product{
+    
+}
