--- a/HeirTu/template/style.css
+++ b/HeirTu/template/style.css
@@ -74,9 +74,10 @@ text-decoration: none;
     flex: 0 1 34rem;
     margin: 1rem;
     height: 50rem;
-    border-bottom: .1rem;
+    border-bottom: .1rem #c0c0c0 solid;
 }
 
-.product{
-    
+.product-image{
+max-width: 34rem;
+max-height: 34rem;
 }
