--- a/HeirTu/template/index.html
+++ b/HeirTu/template/index.html
@@ -10,6 +10,9 @@
     <div class="grid-container">
         <header class="header">
            <div class="brand">
+               <button onclick="openMenu()">
+                   &#9776;
+               </button>
            <a href="index.html">Heir Tu</a> 
            </div>
            <div class="header-links">
@@ -17,24 +20,69 @@
             <a href="SignIn.html">Sign in</a> 
            </div>
         </header >
-        <!-- <aside>
-            Shopping Catagories
-        </aside> -->
-        <main class="main">
+
+
+      <aside class="sidebar">
+          <h3>Shopping Catergories</h3>
+          <button  class="closeMenu" onclick="closeMenu()">X</button>
+          <ul>
+              <li> <a href="index.html">Tops</a></li>
+              <li> <a href="index.html">Bottoms</a></li>
+              <li> <a href="index.html">Shoes</a></li>
+          </ul>
+      </aside>
+        
+      
+      <main class="main">
             <div class="content">
             <ul class="products">
                 <li>
                     <div class="product">
                     <img class="product-image" src="Images/mini-skirt.jpg" alt="product">
-                    <div class="product-name">Pleated Skirt</div>
+                    <div class="product-name"><a  href="product.html">Pleated Skirt</a></div>
                     <div class="product-brand"> Azuri</div>
                     <div class="price"> $600</div>
                 </div>
                 </li> 
-                <!-- <li>Product 2</li>
-                <li>Product 3</li>
-                <li>Product 4</li>
-                <li>Product 5</li> -->
+<!-- Product 2 -->
+                <li>
+                    <div class="product">
+                    <img class="product-image" src="Images/mini-skirt.jpg" alt="product">
+                    <div class="product-name"><a  href="product.html">Pleated Skirt</a></div>
+                    <div class="product-brand"> Azuri</div>
+                    <div class="price"> $600</div>
+                </div>
+                </li> 
+               
+                <!-- Product 3 -->
+                <li>
+                    <div class="product">
+                    <img class="product-image" src="Images/mini-skirt.jpg" alt="product">
+                    <div class="product-name"><a  href="product.html">Pleated Skirt</a></div>
+                    <div class="product-brand"> Azuri</div>
+                    <div class="price"> $600</div>
+                </div>
+                </li>
+                
+                <!-- Product 4 -->
+                <li>
+                    <div class="product">
+                    <img class="product-image" src="Images/mini-skirt.jpg" alt="product">
+                    <div class="product-name"><a  href="product.html">Pleated Skirt</a></div>
+                    <div class="product-brand"> Azuri</div>
+                    <div class="price"> $600</div>
+                </div>
+                </li>  
+               
+                <!-- Product 5 -->
+                <li>
+                    <div class="product">
+                    <img class="product-image" src="Images/mini-skirt.jpg" alt="product">
+                    <div class="product-name"><a  href="product.html">Pleated Skirt</a></div>
+                    <div class="product-brand"> Azuri</div>
+                    <div class="price"> $600</div>
+                </div>
+                </li> 
             </ul>
         </div>
         </main>
@@ -43,5 +91,15 @@
         </footer>
 
     </div>
+
+    <script>
+        function openMenu(){
+            document.querySelector(".sidebar").classList.add("open");
+        }
+
+        function closeMenu(){
+            document.querySelector(".sidebar").classList.remove("open");
+        }
+    </script>
 </body>
 </html>
