--- a/HeirTu/template/style.css
+++ b/HeirTu/template/style.css
@@ -62,22 +62,114 @@ text-decoration: none;
     align-items: center;
 }
 
+a{
+    text-decoration: none;
+}
+
 /* Home Screen */
 
 .products{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.products li{
+li{
+    list-style-type:none ;
+
+}
+.product li{
+    padding: 0;
     flex: 0 1 34rem;
     margin: 1rem;
     height: 50rem;
     border-bottom: .1rem #c0c0c0 solid;
 }
 
+.product{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 5rem;
+}
+
+.product-name{
+    font-size: 2rem;
+}
+
+.product-name a{
+    text-decoration: none;
+    color: skyblue;
+    font-weight: lighter;
+}
+
+.product-name a:hover{
+color: navy;
+}
+
+.product-brand{
+font-size: 1.2rem;
+color: #808080;
+}
+
+.price{
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 .product-image{
 max-width: 34rem;
 max-height: 34rem;
+}
+
+/* sidebar */
+
+.brand button{
+    font-size: 3rem;
+    padding: .5rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.sidebar{
+    position: fixed;
+    transform: translateX(-30rem);
+    width: 30rem;
+    color: black;
+    height: 100% ;
+}
+
+.sidebar.open{
+transform: translateX(0);
+color: black;
+background-color: #808080;
+}
+
+.sidebar a{
+    color: wheat;
+}
+
+.sidebar a:hover{
+    color: skyblue;
+text-decoration: underline;}
+
+
+.closeMenu{
+    /* border-radius: 50%; */
+    border: .1rem black solid;
+    width: 3rem;
+    height: 3rem;
+    padding: .5rem;
+    font-size: 2rem;
+    padding-top: .2rem;
+    cursor: pointer;
+    position: absolute;
+    right: .5rem;
+    top: 1.5rem;
+    background-color: none
+    ;
 }
