--- a/HeirTu/heir/src/index.css
+++ b/HeirTu/heir/src/index.css
@@ -1,13 +1,175 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font: 1.6rem Helvetica;
+  height: 100vh;
+  margin: 0;
+
+}
+
+.grid-container{
+  display: grid;
+  grid-template-areas: 
+  "header"
+  "main"
+  "footer";
+  grid-template-columns: 1fr ;
+  grid-template-rows: 5rem 1fr 5rem;
+  height: 100%;
+}
+
+.header{
+  grid-area: header;
+  background-color: navy;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem;
+}
+
+.brand a{
+  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.header-links a{
+color: white;
+text-decoration: none;
+
+}
+
+.header-links a:hover{
+  color: skyblue;
+  text-decoration: underline;  
+  }
+
+.main{
+  grid-area: main;
+}
+
+.footer{
+  grid-area: footer;
+  background-color: navy;
+   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+}
+
+/* Home Screen */
+
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+li{
+  list-style-type:none ;
+
+}
+.product li{
+  padding: 0;
+  flex: 0 1 34rem;
+  margin: 1rem;
+  height: 50rem;
+  border-bottom: .1rem #c0c0c0 solid;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 5rem;
+}
+
+.product-name{
+  font-size: 2rem;
+}
+
+.product-name a{
+  text-decoration: none;
+  color: skyblue;
+  font-weight: lighter;
+}
+
+.product-name a:hover{
+color: navy;
+}
+
+.product-brand{
+font-size: 1.2rem;
+color: #808080;
+}
+
+.price{
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.product-image{
+max-width: 34rem;
+max-height: 34rem;
+}
+
+/* sidebar */
+
+.brand button{
+  font-size: 3rem;
+  padding: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.sidebar{
+  position: fixed;
+  transform: translateX(-30rem);
+  width: 30rem;
+  color: black;
+  height: 100% ;
+}
+
+.sidebar.open{
+transform: translateX(0);
+color: black;
+background-color: #808080;
+}
+
+.sidebar a{
+  color: wheat;
+}
+
+.sidebar a:hover{
+  color: skyblue;
+text-decoration: underline;}
+
+
+.closeMenu{
+  /* border-radius: 50%; */
+  border: .1rem black solid;
+  width: 3rem;
+  height: 3rem;
+  padding: .5rem;
+  font-size: 2rem;
+  padding-top: .2rem;
+  cursor: pointer;
+  position: absolute;
+  right: .5rem;
+  top: 1.5rem;
+  background-color: none
+  ;
 }
