--- a/HeirTu/heir/src/index.css
+++ b/HeirTu/heir/src/index.css
@@ -13,7 +13,7 @@ body{
 .grid-container{
   display: grid;
   grid-template-areas: 
-  "header"
+  "header2"
   "main"
   "footer";
   grid-template-columns: 1fr ;
